Initial merge with BETA_JAVA17 as of Y20210911-0800